crates/mcb-server/tests/contract/snapshots/contract__project_contract_tests__project_happy_path.snap
---
source: crates/mcb-server/tests/contract/project_contract_tests.rs
assertion_line: 19
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "project",
      "arguments": {
        "action": "list",
        "resource": "project",
        "project_id": "project-contract"
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "result": {
      "resultType": "complete",
      "content": [
        {
          "type": "text",
          "text": "[]"
        }
      ],
      "isError": false
    },
    "id": 1
  }
}
