crates/mcb-server/tests/contract/snapshots/contract__project_contract_tests__project_invalid_args.snap
---
source: crates/mcb-server/tests/contract/project_contract_tests.rs
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "project",
      "arguments": {
        "action": 123,
        "resource": "project",
        "project_id": "project-contract"
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "error": {
      "code": -32602,
      "message": "Failed to parse arguments: invalid type: integer `123`, expected string or map"
    },
    "id": 1
  }
}
